rating for each product item complete

--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -7,8 +7,7 @@
     </h4>
     <p>{{ product.description }}</p>
   </div>
-  <!--  
-    <div class="ratings">
-       <nga-stars [rating]="product.rating"></nga-stars>
-    </div> -->
+  <div class="ratings">
+    <nga-stars [rating]="product.rating"></nga-stars>
+  </div>
 </div>
