--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,1 +1,6 @@
-<p>stars works!</p>
+<p>
+  <span *ngFor="let isEmpty of stars" class="material-icons">
+    {{ isEmpty ? "star_border" : "star" }}
+  </span>
+  <span>{{ rating }} stars</span>
+</p>
