markup for product details component

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,2 +1,13 @@
-<h1>Product ID = {{ productId }}</h1>
-<h1>Product Details = {{ product.price }}</h1>
+<div class="thumbnail">
+  <img src="http://placehold.it/820x320" />
+  <div>
+    <h4 class="float-right">{{ product.price }}</h4>
+    <h4>{{ product.title }}</h4>
+    <p>{{ product.description }}</p>
+  </div>
+  <div class="ratings">
+    <p>
+      <nga-stars [rating]="product.rating"></nga-stars>
+    </p>
+  </div>
+</div>
